--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -158,6 +158,7 @@ $menu-label-color: $white-ter
   mix-blend-mode: multiply;
   width: 100%;
   text-align: center;
+  line-height: 1.3em;
 
 .hmcon
   position: fixed;
